feat: add base layout (Fri, Oct 15, 2021 23.35 PM)

--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -22,9 +22,32 @@
     </div>
     <!-- /.slider_main -->
     <div class="slider_footer">
-      <div class="footer_text"></div>
+      <div class="footer_text">I listening you..?!</div>
       <!-- /.footer_text -->
-      <div class="footer_controls">1111</div>
+      <div class="footer_controls">
+        <ul>
+          <li>
+            <input name="slider" type="radio">
+            <label></label>
+          </li>
+          <li>
+            <input name="slider" type="radio">
+            <label></label>
+          </li>
+          <li>
+            <input name="slider" type="radio">
+            <label></label>
+          </li>
+          <li>
+            <input name="slider" type="radio">
+            <label></label>
+          </li>
+          <li>
+            <input name="slider" type="radio">
+            <label></label>
+          </li>
+        </ul>
+      </div>
       <!-- /.footer_controls -->
     </div>
     <!-- /.slider_footer -->
