feat: add some css for inputs and mobile version (Fri, Oct 16, 2021 0.25 PM)

--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="media.css">
   <title>cssMemSlider</title>
 </head>
 <body>
@@ -22,29 +23,41 @@
     </div>
     <!-- /.slider_main -->
     <div class="slider_footer">
-      <div class="footer_text">I listening you..?!</div>
+      <div class="footer_text">
+        <p>I listening you..?!</p>
+      </div>
       <!-- /.footer_text -->
       <div class="footer_controls">
         <ul>
           <li>
-            <input name="slider" type="radio">
-            <label></label>
+            <input id="0" name="slider" type="radio">
+            <label for="0">
+              <div class="check"></div>
+            </label>
           </li>
           <li>
-            <input name="slider" type="radio">
-            <label></label>
+            <input id="1" name="slider" type="radio">
+            <label for="1">
+              <div class="check"></div>
+            </label>
           </li>
           <li>
-            <input name="slider" type="radio">
-            <label></label>
+            <input id="2" name="slider" type="radio">
+            <label for="2">
+              <div class="check"></div>
+            </label>
           </li>
           <li>
-            <input name="slider" type="radio">
-            <label></label>
+            <input id="3" name="slider" type="radio">
+            <label for="3">
+              <div class="check"></div>
+            </label>
           </li>
           <li>
-            <input name="slider" type="radio">
-            <label></label>
+            <input id="4" name="slider" type="radio">
+            <label for="4">
+              <div class="check"></div>
+            </label>
           </li>
         </ul>
       </div>
