feat: add js (Fri, Oct 16, 2021 14.43 PM)

--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -30,7 +30,7 @@
       <div class="footer_controls">
         <ul>
           <li>
-            <input id="0" name="slider" type="radio">
+            <input id="0" name="slider" type="radio" checked>
             <label for="0">
               <div class="check"></div>
             </label>
