work on mistakes - del script

--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -13,49 +13,48 @@
   <title>cssMemSlider</title>
 </head>
 <body>
+  <input id="slide1" name="slider" type="radio" checked>
+  <input id="slide2" name="slider" type="radio" >
+  <input id="slide3" name="slider" type="radio" >
+  <input id="slide4" name="slider" type="radio" >
+  <input id="slide5" name="slider" type="radio" >
+
   <div class="slider">
-    <div class="slider_main">
-      <div class="main_img">
-        <div class="img_collection"></div>
-        <!-- /.img_collection -->
-      </div>
-      <!-- /.main_img -->
-    </div>
+    <div class="slider_main"></div>
     <!-- /.slider_main -->
     <div class="slider_footer">
       <div class="footer_text">
         <p>I listening you..?!</p>
+        <p>It's for me?</p>
+        <p>Give me my beer!!</p>
+        <p>Pretty cool!</p>
+        <p>Relax! Take it easy.</p>
       </div>
       <!-- /.footer_text -->
       <div class="footer_controls">
         <ul>
           <li>
-            <input id="0" name="slider" type="radio" checked>
-            <label for="0">
+            <label for="slide1">
               <div class="check"></div>
             </label>
           </li>
           <li>
-            <input id="1" name="slider" type="radio">
-            <label for="1">
+            <label for="slide2">
               <div class="check"></div>
             </label>
           </li>
           <li>
-            <input id="2" name="slider" type="radio">
-            <label for="2">
+            <label for="slide3">
               <div class="check"></div>
             </label>
           </li>
           <li>
-            <input id="3" name="slider" type="radio">
-            <label for="3">
+            <label for="slide4">
               <div class="check"></div>
             </label>
           </li>
           <li>
-            <input id="4" name="slider" type="radio">
-            <label for="4">
+            <label for="slide5">
               <div class="check"></div>
             </label>
           </li>
@@ -66,6 +65,5 @@
     <!-- /.slider_footer -->
   </div>
   <!-- /.slider -->
-  <script src="script.js"></script>
 </body>
 </html>
